fixed mobile view, full image not showing

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,6 +63,7 @@
     font-family: $ff-inter;
     color: $main-paragraph;
     font-weight: $fw-400;
+    margin-top: 2rem;
   }
 
   .div--product-card {
